--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,6 +13,7 @@ open_new_tab        : false                    # Opens external URLs in new tab 
 ### Plugins ###
 plugins:
   - jemoji
+  - jekyll-remote-theme
 
 
 ### Navbar Settings ###
