--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,8 @@
 ### Site Settings ###
 title               : portfolio
 description         : >-
-                      I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production.
-baseurl             : "/portfolio"            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+                      Voici mon portfolio
+baseurl             : "/shnoun94/portfolio.io"            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : https://github.com/shnoun94      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
 open_new_tab        : false                    # Opens external URLs in new tab (works for posts, projects and navbar only)
@@ -13,7 +11,6 @@ open_new_tab        : false                    # Opens external URLs in new tab 
 ### Plugins ###
 plugins:
   - jemoji
-  - jekyll-remote-theme
 
 
 ### Navbar Settings ###
@@ -27,26 +24,10 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Elie Shanna
-  image             : https://i.imgur.com/uyDNQnn.jpg
-  behance           : your_username
-# dribbble          : your_username
   email             : snna192@gmail.com
   facebook          : your_username
   github            : https://github.com/shnoun94
-# gitlab            : your_username
-# instagram         : your_username
-# kaggle            : your_username
   linkedin          : your_username
-  medium            : your_username
-# soundcloud        : your_username
-# spotify           : your_username
-# stackoverflow     : your_user_id
-# tumblr            : your_username.tumblr.com
-# twitch            : your_username
-  twitter           : your_username
-# vimeo             : your_username
-# youtube           : your_channel_name
-# keybase           : your_username
 
 
 ### Posts ###
@@ -100,7 +81,11 @@ defaults:
       path: ""
       type: "posts"
     values:
-      comments: false                                   # Set to true to enable disqus comments
+      comments: false     
+  - scope:
+      path: "img"
+    values:
+      image: true                              # Set to true to enable disqus comments
 
 
 ### Exclude from processing ###
