--- a/docs/_data/timeline.yml
+++ b/docs/_data/timeline.yml
@@ -1,11 +1,9 @@
 - title: Student, Harvard CS
   from: 2014
   to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Je suis étudiante en première année de développement web chez Epitech.
+               Passionéé par le numérique et la création, j'apprends à concevoir des sites en alliant technique, logique et créativité.
+               Curieuse et motivée, je développe mes compétences jour aprés jour à travers des projets concrets, avec l'envie de progresser.
 
 - title: Software Engineer, Google, UK
   from: 2018
