--- a/docs/_data/social-media.yml
+++ b/docs/_data/social-media.yml
@@ -1,60 +1,23 @@
 # Get Icons  from : https://fontawesome.com/icons
 # Get Colors from : https://brandcolors.net/
 
-behance:
-  url   : https://www.behance.net/
-  icon  : fab fa-behance
-  color : 1769ff
-
-dribbble:
-  url   : https://dribbble.com/
-  icon  : fab fa-dribbble
-  color : 444444
 
 email:
   url   : "mailto:"
   icon  : fas fa-envelope
   color : db4437
 
-facebook:
-  url   : https://www.facebook.com/
-  icon  : fab fa-facebook
-  color : 3b5998
 
 github:
-  url   : https://www.github.com/
+  url   : https://github.com/shnoun94
   icon  : fab fa-github
   color : 333333
 
-gitlab:
-  url   : https://www.gitlab.com/
-  icon  : fab fa-gitlab
-  color : fca326
-
-instagram:
-  url   : https://www.instagram.com/
-  icon  : fab fa-instagram
-  color : 405de6
-  
-kaggle:
-  url   : https://www.kaggle.com/
-  icon  : fab fa-kaggle
-  color : 20beff
 
 linkedin:
   url   : https://www.linkedin.com/in/
   icon  : fab fa-linkedin-in
   color : 007bb5
-
-medium:
-  url   : https://medium.com/@
-  icon  : fab fa-medium
-  color : 00ab6c
-
-soundcloud:
-  url   : https://www.soundcloud.com/
-  icon  : fab fa-soundcloud
-  color : ff8800
 
 spotify:
   url   : https://open.spotify.com/user/
