--- a/docs/_data/programming-skills.yml
+++ b/docs/_data/programming-skills.yml
@@ -1,11 +1,6 @@
-- name: HTML5/CSS3
-  percentage: 90
+- name: HTML5/CSS
+  percentage: 40
   color: danger
 
-- name: Go
-  percentage: 80
-  color:
-
-- name: Python
-  percentage: 70
-  color: secondary
+- name: PHP
+  percentage: 40
