--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,8 +14,9 @@ plugins:
 
 ### Navbar Settings ###
 nav_exclude:                                            # The following paths are excluded from navbar
-  - pages/tags.html
+  - pages../tags.html
   - pages/404.html
+  - pages/about.md
   - pages/index.md
   - documentation/partials/**                           # For Documentation Only
 
