--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,10 +14,11 @@ plugins:
 
 ### Navbar Settings ###
 nav_exclude:                                            # The following paths are excluded from navbar
-  - pages../tags.html
-  - pages/404.html
-  - pages/about.md
-  - pages/index.md
+  - 
+  - pages../404.html
+  - pages../about.html
+  - pages../index.md
+  - pages../projects.html
   - documentation/partials/**                           # For Documentation Only
 
 
