--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,9 @@ plugins:
 
 ### Navbar Settings ###
 nav_exclude:                                            # The following paths are excluded from navbar
-  - 
-  - pages../404.html
-  - pages../about.html
-  - pages../index.md
-  - pages../projects.html
+  - pages/tags.html
+  - pages/404.html
+  - pages/index.md
   - documentation/partials/**                           # For Documentation Only
 
 
