--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ defaults:
       path: ""
       type: "projects"
     values:
-      layout: "page"
+      layout: "pages"
   - scope:                                              # For Documentation Only
       path: ""                                          # For Documentation Only
       type: "elements"                                  # For Documentation Only
