--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - documentation/partials/**                           # For Documentation Only
 
+header_pages:
+- ../pages/about.md
 
 ### Author Info ###
 author:
@@ -70,7 +72,7 @@ defaults:
       path: ""
       type: "projects"
     values:
-      layout: "pages"
+      layout: "page"
   - scope:                                              # For Documentation Only
       path: ""                                          # For Documentation Only
       type: "elements"                                  # For Documentation Only
